objects/Call__c.object
<CustomObject>
    <fields>
        <fullName>Production_URL__c</fullName>
        <formula>Member__r.Prod_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prof_Dev_Training_Team_Lead_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate that specific EAB value lead-type user attended the training. Created for CR-20160105-9490.</description>
        <label>Prof. Dev. &amp; Training Team Lead Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Member__r.Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_DA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of CR-3833</description>
        <label>Project: DA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Member_Interactions7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Institution__c</fullName>
        <formula>Member__r.Institution__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Institution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Member__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Next_Contract_Decision__c</fullName>
        <formula>Member__r.Next_Contract_Decision__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project: Next Contract Decision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <label>Project Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Stream</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Sponsor_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did the Project Sponsor Attend this training?</inlineHelpText>
        <label>Project Sponsor Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Member Interactions (Project Sponsor)</relationshipLabel>
        <relationshipName>Member_Interactions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prospect_s_Core_Questions__c</fullName>
        <description>created as part of CR 3694</description>
        <inlineHelpText>Please provide at least three core questions the prospect is seeking to address through this engagement</inlineHelpText>
        <label>Prospect&apos;s Core Questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <description>CR-20120208-419</description>
        <label>Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pushback__c</fullName>
        <inlineHelpText>Please use this field to detail out any pushback you received.</inlineHelpText>
        <label>Pushback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QA_Call_Numeric_Grade__c</fullName>
        <inlineHelpText>Numeric grade (on 4.0 GPA scale) for overall letter grade given on QA call. Leave blank for non-QA calls.</inlineHelpText>
        <label>QA Call Numeric Grade</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QA_Call_Recommend_Grade__c</fullName>
        <inlineHelpText>Enter response of MOST SENIOR member on call to &quot;on a 1 to 10 scale, how likely are you to recommend&quot; QA call question. Leave blank for non-QA calls.</inlineHelpText>
        <label>QA Call Recommend Grade</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QA_Call_Renew_Grade__c</fullName>
        <inlineHelpText>Enter response of MOST SENIOR member on call to &quot;on a 1 to 10 scale, how likely are you to renew&quot; QA call question. Leave blank for non-QA calls.</inlineHelpText>
        <label>QA Call Renew Grade</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QA_Grade__c</fullName>
        <inlineHelpText>Select a grade for this interaction</inlineHelpText>
        <label>QA Grade</label>
        <picklist>
            <controllingField>Call_Type__c</controllingField>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quotes__c</fullName>
        <label>Quotes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reference_Call_Outcome__c</fullName>
        <label>Reference Call Outcome</label>
        <picklist>
            <controllingField>Call_Type__c</controllingField>
            <picklistValues>
                <fullName>Pending</fullName>
                <color>#FFFF66</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Joined</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Join</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
                <color>#33CC00</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referring_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of CR-3833</description>
        <inlineHelpText>Member that provided the Reference (tag specific membership)</inlineHelpText>
        <label>Referring Member</label>
        <referenceTo>Membership__c</referenceTo>
        <relationshipLabel>Member Interactions (Referring Member)</relationshipLabel>
        <relationshipName>Member_Interactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refresher_Course_New_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refresher Course/New User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of CR-3833</description>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Member Interactions</relationshipLabel>
        <relationshipName>Member_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>created as part of CR 3694</description>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Member_Interactions12</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Completion_Date__c</fullName>
        <description>created as part of CR 3694</description>
        <label>Requested Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_On_Site_Date__c</fullName>
        <label>Requested On-Site Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Category__c</fullName>
        <inlineHelpText>Please assign a risk category for this member using the three category options - green, yellow or red.</inlineHelpText>
        <label>Risk Category</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Notes__c</fullName>
        <label>Risk Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scheduled_End__c</fullName>
        <label>Scheduled End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Start__c</fullName>
        <label>Scheduled Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Send_call_notes_to_my_E_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to have the contents of these notes to be sent to you (the creator of this member interaction)</inlineHelpText>
        <label>Send Notes To My E-Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Senior_Member_On_Call__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Required: Field Critical for MHI Calculations. Do NOT create a new contact here if you can&apos;t find yours. Before creating new contacts, attempt to find and correctly link an existing contact record.</inlineHelpText>
        <label>Senior Member Attendee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Member Interactions (Senior Member Attendee)</relationshipLabel>
        <relationshipName>Member_Interactions4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Senior_Member_Participated_Intended__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR-20150311-8751</description>
        <label>Senior Member Participated (Intended)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Member Interactions (Senior Member Participated (Intended))</relationshipLabel>
        <relationshipName>Member_InteractionsunOn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Senior_Most_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR-20150311-8751</description>
        <label>Senior Most Attendee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Member Interactions (Senior Most Attendee)</relationshipLabel>
        <relationshipName>Member_Interactions9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Concern_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to indicate that a concern about the BA or DA service, timing, communication / update strategy, project management, or other aspect of the Advisory Board&apos;s service was expressed during this call.</inlineHelpText>
        <label>Service Concern Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Plan_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you presented a Service Plan during this interaction, please update the Interaction Category and verify the plan is also attached to this record.</inlineHelpText>
        <label>Service Plan Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Errors_Identified__c</fullName>
        <inlineHelpText>Please document any site errors that occurred in this member site.</inlineHelpText>
        <label>Site Errors Identified</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sponsor_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Required: Field Critical for MHI Calculations. Check this box if this call qualifies as a Sponsor Update. With rare exceptions, this only applies to calls on which executive sponsor was actually present. Discuss any questions with your manager.</inlineHelpText>
        <label>Sponsor Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strategic_Planning_Meeting__c</fullName>
        <label>Strategic Planning Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submit_Training_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit Training Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Super_User_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did the Super User attend this training?</inlineHelpText>
        <label>Super User Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Super_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Super User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Member Interactions (Super User)</relationshipLabel>
        <relationshipName>Member_Interactions5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_URL__c</fullName>
        <formula>Member__r.Test_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thank_You_Gift__c</fullName>
        <description>Created as part of CR-3833</description>
        <inlineHelpText>Did the Referring Member receive anything for providing the Reference?</inlineHelpText>
        <label>Thank You Gift</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <description>Created for CR-20150311-8751.</description>
        <label>Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Created as part of CR-3833</description>
        <formula>Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Traditional_CTI__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this a Traditional CTI? If not, please provide details within the notes section below.</inlineHelpText>
        <label>Traditional CTI?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trainer_Password__c</fullName>
        <description>Created as a part of CR 3884</description>
        <label>Trainer Password</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainer_Username__c</fullName>
        <inlineHelpText>DAs: Please fill this out once coordinator has assigned a Trainer to this onsite.</inlineHelpText>
        <label>Trainer Username</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Effectiveness_Grade__c</fullName>
        <description>A drop-down GPA type field where member training effectiveness rating from Post-Eval will be recorded. Created for CR-20160105-9490</description>
        <label>Training Effectiveness Grade</label>
        <picklist>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Focus__c</fullName>
        <description>Created as a part of CR 3884</description>
        <label>Training Focus</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Training_GPA__c</fullName>
        <label>Training GPA</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Met_Member_s_Expectations__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did the training meet the member&apos;s expectations?</inlineHelpText>
        <label>Training Met Member&apos;s Expectations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Option_1__c</fullName>
        <label>Training Option 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Option_2__c</fullName>
        <description>Used to show date member is available for training. Converted from Date to Date/Time data type for CR-20160105-9490.</description>
        <label>Training Option 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Training_Option_3__c</fullName>
        <description>Used to show date member is available for training. Converted from Date to Date/Time data type for CR-20160105-9490.</description>
        <label>Training Option 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Training_Prof_Dev_Engagement_Team_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to indicate member contact Training Lead for EAB products. Created for CR-20160105-9490</description>
        <label>Training &amp; Prof Dev Engagement Team Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Member Interactions (Training &amp; Prof. Dev Engagement Team Lea)</relationshipLabel>
        <relationshipName>Member_InteractionsODYB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Team_Notes__c</fullName>
        <label>Training Team Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Training_Type__c</fullName>
        <description>CR-20120305-545</description>
        <label>Training Type</label>
        <picklist>
            <controllingField>Interaction_Type__c</controllingField>
            <picklistValues>
                <fullName>Beginner Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beginner Web-Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTI Onsite Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate/Advanced Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate/Advanced Web-Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launch Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach – Data Driven Conversations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach – Liaison Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach – Service Line Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refresher Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Onsite - Not Traditional CTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Training Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Training Single</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transition_Begin_Date__c</fullName>
        <label>Transition Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transition_Complete__c</fullName>
        <label>Transition Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transition_Difficulty__c</fullName>
        <label>Transition Difficulty</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transition_in_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate whether or not the member is using an outdated version of the tool and trainer should use historical nomenclature and workflow. Created for CR-20160105-9490</description>
        <inlineHelpText>Check this field if the member will be replacing an existing system on campus with the use of SSC Campus in sync with the requested training.</inlineHelpText>
        <label>Transition in Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Hours__c</fullName>
        <description>The cumulative hours spent traveling for this interaction, not including time spent doing work activities.</description>
        <label>Travel Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Notes__c</fullName>
        <label>Travel Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Turnaround_Time__c</fullName>
        <description>created as part of CR 3694</description>
        <formula>IF(OR(ISNULL(Completion_Date__c), ISBLANK(Completion_Date__c)), TODAY() - DATEVALUE(CreatedDate), Completion_Date__c - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Turnaround Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upsell_Opportunity__c</fullName>
        <description>CR-20120208-419</description>
        <label>Upsell Opportunity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Types_in_Training__c</fullName>
        <description>Used to show types of EAB product users being trained by training, filled out by EAB Consultant. Created for CR-20160105-9490</description>
        <label>User Types in Training</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value_Lead_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did the Value Lead attend this training?</inlineHelpText>
        <label>Value Lead Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Value Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Member Interactions (Value Lead)</relationshipLabel>
        <relationshipName>Member_Interactions6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Web_Training_Focus__c</fullName>
        <inlineHelpText>DAs to provide specific details regarding the focus of the training here</inlineHelpText>
        <label>Web Training Focus</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Webinar_Attendees_and_Emails__c</fullName>
        <inlineHelpText>Provide names and respective emails for attendeees who will be invited to training. An outlook invite will be sent to the names provided in this field.</inlineHelpText>
        <label>Webinar Attendees and Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Will_Need_Additional_Training_Session__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Will the member need additional training sessions?</inlineHelpText>
        <label>Will Need Additional Training Session</label>
        <type>Checkbox</type>
    </fields>
    <label>Member Interaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Interaction_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bill_s_Member_Interaction</fullName>
        <columns>NAME</columns>
        <columns>Member__c</columns>
        <columns>Member_Name__c</columns>
        <columns>Call_Type__c</columns>
        <columns>Interaction_Type__c</columns>
        <columns>Call_Date__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <columns>DA_Pod_Lead__c</columns>
        <columns>ABC_Representative__c</columns>
        <columns>Effort_Hours__c</columns>
        <columns>Travel_Hours__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ABC_Representative__c</field>
            <operation>contains</operation>
            <value>William Lynagh</value>
        </filters>
        <label>Bill&apos;s Member Interaction</label>
    </listViews>
    <listViews>
        <fullName>Bill_s_Member_Interactions_June_2013</fullName>
        <columns>NAME</columns>
        <columns>Member__c</columns>
        <columns>Call_Date__c</columns>
        <columns>ABC_Representative__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <columns>Senior_Member_On_Call__c</columns>
        <columns>Interaction_Type__c</columns>
        <columns>Effort_Hours__c</columns>
        <columns>Travel_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ABC_Representative__c</field>
            <operation>contains</operation>
            <value>William Lynagh</value>
        </filters>
        <label>Bill&apos;s Member Interactions_June 2013</label>
    </listViews>
    <listViews>
        <fullName>Brian_MICHELS</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>Project_Name__c</columns>
        <columns>Call_Date__c</columns>
        <columns>Current_Status__c</columns>
        <columns>ABC_Representative__c</columns>
        <columns>Call_Brief_Notes__c</columns>
        <columns>Interaction_Type__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ABC_Representative__c</field>
            <operation>equals</operation>
            <value>Brian Michels</value>
        </filters>
        <filters>
            <field>ABC_Representative__c</field>
            <operation>equals</operation>
            <value>Krystal Hopton</value>
        </filters>
        <label>CMA Outreach Team</label>
    </listViews>
    <listViews>
        <fullName>CMA_On_Site</fullName>
        <columns>NAME</columns>
        <columns>Member__c</columns>
        <columns>Project_Name__c</columns>
        <columns>QA_Grade__c</columns>
        <columns>Call_Date__c</columns>
        <columns>ABC_Representative__c</columns>
        <columns>Senior_Member_On_Call__c</columns>
        <columns>Call_Notes__c</columns>
        <columns>Risk_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Call__c.Onsite</value>
        </filters>
        <label>CMA On Site</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CMA_Trainer_Request</fullName>
        <columns>NAME</columns>
        <columns>Institution__c</columns>
        <columns>Training_Type__c</columns>
        <columns>Call_Brief_Notes__c</columns>
        <columns>Call_Date__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <columns>Assigned_Trainer__c</columns>
        <columns>Option_1_Start__c</columns>
        <columns>Option_1_End__c</columns>
        <columns>Training_Option_1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Call__c.Trainer_Request</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>contains</operation>
            <value>BIPP</value>
        </filters>
        <filters>
            <field>Assigned_Trainer__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Date_Scheduled__c</field>
            <operation>equals</operation>
        </filters>
        <label>CMA Trainer Request - Pending Assignment</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CMA_Trainer_Request_Assigned_Upcoming</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Call_Date__c</columns>
        <columns>Training_Type__c</columns>
        <columns>Call_Brief_Notes__c</columns>
        <columns>Institution__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <columns>Assigned_Trainer__c</columns>
        <columns>Training_Option_1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Call__c.Trainer_Request</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>contains</operation>
            <value>BIPP</value>
        </filters>
        <filters>
            <field>Assigned_Trainer__c</field>
            <operation>equals</operation>
            <value>Pam Siegelaub</value>
        </filters>
        <filters>
            <field>CTI_Trainer__c</field>
            <operation>notEqual</operation>
            <value>Pam Siegelaub</value>
        </filters>
        <label>CMA Trainer Request - Assigned/Date TBD</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CMA_Training</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Date_Time_Opened__c</columns>
        <columns>NAME</columns>
        <columns>Training_Type__c</columns>
        <columns>Project_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Assigned_Trainer__c</columns>
        <columns>Current_Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Call_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>contains</operation>
            <value>BIPP</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Call__c.Trainer_Request</value>
        </filters>
        <label>CMA Training</label>
    </listViews>
    <listViews>
        <fullName>Completed_ELs</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>El_Type__c</columns>
        <columns>Current_Status__c</columns>
        <columns>Requested_Completion_Date__c</columns>
        <columns>Development_Staff__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Call__c.Southwind_EL_Request</value>
        </filters>
        <filters>
            <field>Current_Status__c</field>
            <operation>equals</operation>
            <value>7 - Completed</value>
        </filters>
        <label>_Template_Completed ELs</label>
    </listViews>
</CustomObject>